--- a/data/www/device.html
+++ b/data/www/device.html
@@ -28,7 +28,7 @@
         <div class="stat-grid">
             <div class="stat-card">
                 <div class="stat-label">Firmware</div>
-                <div class="stat-value" style="font-size:18px;" id="fw-version">v1.0.0</div>
+                <div class="stat-value" style="font-size:18px;" id="fw-version">v2.0.0</div>
             </div>
             <div class="stat-card">
                 <div class="stat-label">Chip</div>
@@ -57,6 +57,19 @@
                 <div class="status-row"><span class="status-label">FS Used</span><span class="status-value" id="fs-used">--</span></div>
                 <div class="status-row"><span class="status-label">FS Total</span><span class="status-value" id="fs-total">--</span></div>
             </div>
+        </div>
+
+        <div class="card">
+            <h2>Button Controls</h2>
+            <p style="font-size:13px; color:var(--text-secondary); margin:-8px 0 16px;">
+                Physical button actions on the TC001 device.
+            </p>
+            <div class="status-row"><span class="status-label">Left Short</span><span class="status-value">Toggle display mode</span></div>
+            <div class="status-row"><span class="status-label">Left Long</span><span class="status-value">Reset to glucose</span></div>
+            <div class="status-row"><span class="status-label">Middle Short</span><span class="status-value">Cycle brightness</span></div>
+            <div class="status-row"><span class="status-label">Middle Long</span><span class="status-value">Snooze alerts</span></div>
+            <div class="status-row"><span class="status-label">Right Short</span><span class="status-value">Start/pause (timer/stopwatch)</span></div>
+            <div class="status-row"><span class="status-label">Right Long</span><span class="status-value">Reset timer/stopwatch</span></div>
         </div>
 
         <div class="card-grid">
