--- a/data/www/debug.html
+++ b/data/www/debug.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TC001 - Debug</title>
+    <title>SugarClock - Debug</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="topnav">
         <div class="topnav-inner">
-            <a href="/" class="brand"><div class="brand-icon">G</div><span>TC001</span></a>
+            <a href="/" class="brand"><div class="brand-icon">G</div><span>SugarClock</span></a>
             <ul class="topnav-links">
                 <li><a href="/">Dashboard</a></li>
                 <li><a href="/config.html">Config</a></li>
