--- a/data/www/device.html
+++ b/data/www/device.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TC001 - Device</title>
+    <title>SugarClock - Device</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="topnav">
         <div class="topnav-inner">
-            <a href="/" class="brand"><div class="brand-icon">G</div><span>TC001</span></a>
+            <a href="/" class="brand"><div class="brand-icon">G</div><span>SugarClock</span></a>
             <ul class="topnav-links">
                 <li><a href="/">Dashboard</a></li>
                 <li><a href="/config.html">Config</a></li>
@@ -62,7 +62,7 @@
         <div class="card">
             <h2>Button Controls</h2>
             <p style="font-size:13px; color:var(--text-secondary); margin:-8px 0 16px;">
-                Physical button actions on the TC001 device.
+                Physical button actions on the SugarClock device.
             </p>
             <div class="status-row"><span class="status-label">Left Short</span><span class="status-value">Toggle display mode</span></div>
             <div class="status-row"><span class="status-label">Left Long</span><span class="status-value">Reset to glucose</span></div>
