--- a/data/www/index.html
+++ b/data/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TC001 - Dashboard</title>
+    <title>SugarClock - Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="topnav-inner">
             <a href="/" class="brand">
                 <div class="brand-icon">G</div>
-                <span>TC001</span>
+                <span>SugarClock</span>
             </a>
             <ul class="topnav-links">
                 <li><a href="/" class="active">Dashboard</a></li>
@@ -55,15 +55,10 @@
             </div>
         </div>
 
-        <div class="graph-container" id="history-container" style="display:none;">
-            <h3>Recent Readings</h3>
-            <svg id="history-graph" viewBox="0 0 600 100" preserveAspectRatio="none"></svg>
-        </div>
-
         <!-- Feature status cards -->
         <div class="card-grid" id="feature-cards">
             <div class="card card-compact" id="timer-card" style="display:none;">
-                <h2>Pomodoro Timer</h2>
+                <h2>Pomodoro Timer <a href="/config.html#time" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label">State</span>
                     <span class="status-value"><span class="badge badge-blue" id="timer-state">--</span></span>
@@ -79,7 +74,7 @@
             </div>
 
             <div class="card card-compact" id="stopwatch-card" style="display:none;">
-                <h2>Stopwatch</h2>
+                <h2>Stopwatch <a href="/config.html#time" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label">State</span>
                     <span class="status-value"><span class="badge badge-green" id="sw-state">--</span></span>
@@ -91,7 +86,7 @@
             </div>
 
             <div class="card card-compact" id="weather-card" style="display:none;">
-                <h2>Weather</h2>
+                <h2>Weather <a href="/config.html#weather" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label">Temperature</span>
                     <span class="status-value" id="weather-temp">--</span>
@@ -103,7 +98,7 @@
             </div>
 
             <div class="card card-compact" id="sysmon-card" style="display:none;">
-                <h2>System Monitor</h2>
+                <h2>System Monitor <a href="/config.html#integrations" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label" id="sysmon-label-text">CPU</span>
                     <span class="status-value" id="sysmon-value">--</span>
@@ -114,7 +109,7 @@
             </div>
 
             <div class="card card-compact" id="countdown-card" style="display:none;">
-                <h2 id="countdown-title">Countdown</h2>
+                <h2 id="countdown-title">Countdown <a href="/config.html#time" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label">Remaining</span>
                     <span class="status-value" id="countdown-remaining">--</span>
@@ -124,7 +119,7 @@
 
         <div class="card-grid">
             <div class="card card-compact">
-                <h2>Connection</h2>
+                <h2>Connection <a href="/config.html#connection" class="gear-link" title="Configure">&#9881;</a></h2>
                 <div class="status-row">
                     <span class="status-label">IP Address</span>
                     <span class="status-value" id="wifi-ip">--</span>
@@ -163,24 +158,10 @@
         function fmtSec(s){const m=Math.floor(s/60),ss=s%60;return m+':'+(ss<10?'0':'')+ss;}
         function fmtCountdown(s){if(s<=0)return'NOW!';if(s<3600)return Math.floor(s/60)+'m';if(s<86400){const h=Math.floor(s/3600),m=Math.floor((s%3600)/60);return h+'h '+m+'m';}return Math.floor(s/86400)+'d';}
 
-        function drawGraph(hist){
-            const c=document.getElementById('history-container'),svg=document.getElementById('history-graph');
-            if(!hist||hist.length<2){c.style.display='none';return;}c.style.display='block';
-            const w=600,h=100,p=8,vals=hist.map(e=>e.glucose),mn=Math.min(...vals)-10,mx=Math.max(...vals)+10,rng=mx-mn||1;
-            const t=window._t||{urgent_low:70,low:80,high:180,urgent_high:250};
-            const yV=v=>h-p-((Math.min(Math.max(v,mn),mx)-mn)/rng)*(h-2*p);
-            let z=`<rect x="0" y="${yV(t.high)}" width="${w}" height="${yV(t.low)-yV(t.high)}" fill="rgba(34,197,94,0.06)"/>`;
-            let pts=[],dots='';
-            for(let i=0;i<hist.length;i++){const x=p+(i/(hist.length-1))*(w-2*p),y=yV(hist[i].glucose);pts.push(x+','+y);
-            const v=hist[i].glucose;let cl='#22c55e';if(v<t.urgent_low||v>t.urgent_high)cl='#ef4444';else if(v<t.low||v>t.high)cl='#f59e0b';
-            dots+=`<circle cx="${x}" cy="${y}" r="2.5" fill="${cl}"/>`;}
-            svg.innerHTML=z+`<polyline points="${pts.join(' ')}" fill="none" stroke="#3b82f6" stroke-width="1.5" stroke-linejoin="round"/>`+dots;
-        }
-
         async function refresh(){
             try{
-                const[sr,hr]=await Promise.all([fetch('/api/status'),fetch('/api/history').catch(()=>null)]);
-                const d=await sr.json(),hist=hr?await hr.json().catch(()=>null):null;
+                const sr=await fetch('/api/status');
+                const d=await sr.json();
                 const gv=document.getElementById('glucose-value'),ta=document.getElementById('trend-arrow'),dd=document.getElementById('delta-display');
                 if(d.valid&&d.glucose>0){gv.textContent=d.glucose;ta.textContent=trendMap[d.trend]||'?';}else{gv.textContent='---';ta.textContent='';}
                 const cc=colorMap[d.color]||'';gv.className='value '+cc;ta.className='trend '+cc;
@@ -192,7 +173,7 @@
                 document.getElementById('wifi-rssi-dbm').textContent=d.wifi_rssi+' dBm';document.getElementById('failure-count').textContent=d.failure_count;
                 document.getElementById('uptime').textContent=fmtUp(d.uptime_sec);document.getElementById('brightness').textContent=d.brightness;
                 document.getElementById('message').textContent=d.message||'--';
-                if(d.thresholds)window._t=d.thresholds;if(hist&&hist.readings)drawGraph(hist.readings);
+                if(d.thresholds)window._t=d.thresholds;
 
                 // Timer card
                 const tc=document.getElementById('timer-card');
