--- a/data/www/device.html
+++ b/data/www/device.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SugarClock - Device</title>
     <link rel="stylesheet" href="style.css">
+    <script>if(localStorage.getItem('theme')==='dark')document.documentElement.setAttribute('data-theme','dark');</script>
 </head>
 <body>
     <nav class="topnav">
         <div class="topnav-inner">
             <a href="/" class="brand"><div class="brand-icon">G</div><span>SugarClock</span></a>
             <ul class="topnav-links">
-                <li><a href="/">Dashboard</a></li>
-                <li><a href="/config.html">Config</a></li>
+                <li><a href="/display.html">Dashboard</a></li>
+                <li><a href="/">Config</a></li>
                 <li><a href="/debug.html">Debug</a></li>
                 <li><a href="/device.html" class="active">Device</a></li>
             </ul>
+            <button class="theme-toggle" onclick="toggleTheme()" title="Toggle theme">&#9790;</button>
         </div>
     </nav>
 
@@ -110,6 +112,15 @@
         document.getElementById('restart-btn').addEventListener('click',async()=>{if(!confirm('Restart?'))return;try{await fetch('/api/restart',{method:'POST'});showToast('Restarting...');}catch(e){showToast('Failed','error');}});
         document.getElementById('reset-btn').addEventListener('click',async()=>{if(!confirm('Factory reset? All settings erased.'))return;try{await fetch('/api/factory-reset',{method:'POST'});showToast('Resetting...');}catch(e){showToast('Failed','error');}});
         load();
+
+        function toggleTheme(){
+            const d=document.documentElement;
+            const dark=d.getAttribute('data-theme')==='dark';
+            if(dark){d.removeAttribute('data-theme');localStorage.removeItem('theme');}
+            else{d.setAttribute('data-theme','dark');localStorage.setItem('theme','dark');}
+            document.querySelector('.theme-toggle').innerHTML=dark?'&#9790;':'&#9728;';
+        }
+        if(localStorage.getItem('theme')==='dark')document.querySelector('.theme-toggle').innerHTML='&#9728;';
     </script>
 </body>
 </html>
